fix: scrollbar fix when page size changes

--- a/src/react/components/pages/editorPage/editorPage.scss
+++ b/src/react/components/pages/editorPage/editorPage.scss
@@ -37,11 +37,10 @@
   &-right-sidebar {
     display: flex;
     margin-left: auto;
-    width: 100%;
+    height: 100%;
   }
 
   &-content {
-    height: 100%;
     flex-grow: 1;
     display: flex;
     flex-direction: row;
